--- a/RioId/appsettings.json
+++ b/RioId/appsettings.json
@@ -12,6 +12,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Data Source=.; Initial Catalog=RioIdDb;Integrated Security=true;Application Name=RioId;TrustServerCertificate=True;"
   }
 }
