Login page updated as per Squidex Login

--- a/RioId/appsettings.json
+++ b/RioId/appsettings.json
@@ -10,7 +10,17 @@
       }
     }
   },
-
+  "defaultSettings": {
+    "emailConfirmationSubject": "[RioId] Confirm your email address",
+    "emailConfirmationText": "Please click <a href=\"{URL}\">here</a> to confirm your email-address.",
+    "emailPasswordResetSubject": "[RioId] Reset your password",
+    "emailPasswordResetText": "Please click <a href=\"{URL}\">here</a> to reset your password.",
+    "smtpServer": "in-v3.mailjet.com",
+    "smtpUsername": "",
+    "smtpPassword": "",
+    "smtpSender": "cs@antargyan.com",
+    "siteName": "RioId"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.; Initial Catalog=RioIdDb;Integrated Security=true;Application Name=RioId;TrustServerCertificate=True;"
   }
