Register Page Added

--- a/RioId/appsettings.json
+++ b/RioId/appsettings.json
@@ -19,7 +19,9 @@
     "smtpUsername": "",
     "smtpPassword": "",
     "smtpSender": "cs@antargyan.com",
-    "siteName": "RioId"
+    "siteName": "RioId",
+    "privacyPolicyUrl": "https://www.antargyan.com/privacy-notice",
+    "termsOfServiceUrl": "https://www.antargyan.com/conditions-of-use"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.; Initial Catalog=RioIdDb;Integrated Security=true;Application Name=RioId;TrustServerCertificate=True;"
